--- a/dulcealegria/index.html
+++ b/dulcealegria/index.html
@@ -2,136 +2,146 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Dulce Tentación - Pastelería artesanal con pasteles premium.">
-    <link rel="canonical" href="https://www.dulcetentacion.com">
+    <meta name="description" content="Dulce Tentación - Pastelería refinada con pasteles artesanales de calidad.">
+    <link rel="canonical" href="https://www.dulcetentacion.com/">
     <meta property="og:title" content="Dulce Tentación">
-    <meta property="og:description" content="Deliciosos pasteles artesanales para cualquier ocasión.">
-    <meta property="og:image" content="placeholder_image_url">
-    <meta property="og:url" content="https://www.dulcetentacion.com">
+    <meta property="og:description" content="Deliciosos pasteles artesanales. Haz tu pedido hoy.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.dulcetentacion.com/">
     <title>Dulce Tentación</title>
     <script src="https://cdn.tailwindcss.com"></script>
     
 
   <link rel="stylesheet" href="styles.css" /></head>
-<body class="bg-white">
-    <header class="sticky top-0 bg-white shadow">
-        <nav class="flex justify-between p-4">
-            <h1 class="text-xl font-bold">Dulce Tentación</h1>
-            <a href="#contact" class="bg-pink-500 text-white py-2 px-4 rounded">Hacer pedido</a>
-        </nav>
-    </header>
-    <main>
-        <section class="hero-bg py-20 text-center">
-            <h2 class="text-4xl font-bold mb-2">Pasteles Premium Hechos con Amor</h2>
-            <p class="text-lg mb-4">Cada bocado es una experiencia única.</p>
-            <a href="#contact" class="bg-pink-500 text-white py-3 px-6 rounded">Hacer pedido</a>
-        </section>
-        <section class="py-10">
-            <h3 class="text-2xl text-center mb-6">Categorías de Pasteles</h3>
-            <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="card bg-white rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Chocolate</h4>
-                    <p>Delicioso pastel de chocolate negro.</p>
-                    <p class="font-bold">$25</p>
-                </div>
-                <div class="card bg-white rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Frutas</h4>
-                    <p>Pastel fresco con frutas de temporada.</p>
-                    <p class="font-bold">$30</p>
-                </div>
-                <div class="card bg-white rounded-lg p-4 shadow">
-                    <h4 class="font-semibold">Red Velvet</h4>
-                    <p>Suave y esponjoso, con un toque de vainilla.</p>
-                    <p class="font-bold">$28</p>
-                </div>
-                <div class="card bg-white rounded-lg p-4 shadow">
-<img src="https://images.pexels.com/photos/4502964/pexels-photo-4502964.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Testimonios image" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+<body class="bg-white text-gray-800">
 
-<img src="https://images.pexels.com/photos/12566548/pexels-photo-12566548.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Ingredientes y Proceso Artesanal image" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+<header class="sticky top-0 bg-white shadow">
+    <nav class="container mx-auto flex justify-between items-center p-4">
+        <section style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.pexels.com/photos/32323050/pexels-photo-32323050.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'); background-size: cover; background-position: center; background-repeat: no-repeat; min-height: 500px; display: flex; align-items: center; justify-content: center; text-align: center;"><h1 class="text-2xl font-bold">Dulce Tentación</h1></section>
+        <a href="#contact" class="bg-pink-500 text-white px-4 py-2 rounded">Hacer pedido</a>
+    </nav>
+</header>
 
-                    <h4 class="font-semibold">Tres Leches</h4>
-                    <p>Un clásico que no puedes dejar pasar.</p>
-                    <p class="font-bold">$32</p>
-                </div>
-            </div>
-        </section>
-        <section class="py-10">
-            <h3 class="text-2xl text-center mb-6">Ingredientes y Proceso Artesanal</h3>
-            <p class="text-center">Utilizamos ingredientes frescos y de alta calidad en cada pastel.</p>
-        </section>
-        <section class="py-10">
-            <h3 class="text-2xl text-center mb-6">Testimonios</h3>
-            <div class="flex justify-center">
-<img src="https://images.pexels.com/photos/33551333/pexels-photo-33551333.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Galería image" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
-<div class='grid grid-cols-2 md:grid-cols-3 gap-4 my-6'><img src='https://images.pexels.com/photos/6666661/pexels-photo-6666661.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940' alt='Gallery image' loading='lazy' class='w-full h-44 object-cover rounded-xl'/><img src='https://images.pexels.com/photos/9499092/pexels-photo-9499092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940' alt='Gallery image' loading='lazy' class='w-full h-44 object-cover rounded-xl'/><img src='https://images.pexels.com/photos/32767092/pexels-photo-32767092.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940' alt='Gallery image' loading='lazy' class='w-full h-44 object-cover rounded-xl'/></div>
+<main>
+    <section class="hero py-20 text-center">
+        <h2 class="text-4xl font-bold mb-2">Pasteles Artesanales de Calidad</h2>
+        <p class="mb-8">Cada pastel cuenta una historia, hecha con amor y dedicación.</p>
+        <a href="#contact" class="bg-pink-500 text-white px-6 py-3 rounded">Hacer pedido</a>
+    </section>
 
+    <section class="container mx-auto py-10">
+        <h3 class="text-3xl font-semibold mb-6">Categorías de Pasteles</h3>
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+            <div class="card bg-white rounded-lg shadow-lg p-4">
+<img src="https://images.pexels.com/photos/27275809/pexels-photo-27275809.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 1: Crea una landing page refinada para la pastelería “Dulce Tentación”. Usa paleta pastel (rosa suave, crema, dorado claro) para una vista limpia y elegante. Hero section con foto de calidad de un pastel premium, breve historia de la pastelería y CTA para “Hacer pedido”. Muestra categorías de pasteles (Chocolate, Frutas, Red Velvet, Tres Leches), cada una con breve descripción y precio. Incluye sección de ingredientes y proceso artesanal, testimonios con estrellas, galería pequeña, formulario de contacto, información de ubicación y horarios. Usa cartas redondas con sombras ligeras, tipografía elegante, optimizado para móvil. Agrega tags de Twitter, Facebook e Instagram." loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
 
-                <span class="text-yellow-500">⭐⭐⭐⭐⭐</span>
-                <p class="ml-2">"Los mejores pasteles que he probado!"</p>
+                <h4 class="font-bold">Chocolate</h4>
+                <p>Delicioso pastel de chocolate con crema suave.</p>
+                <p class="font-semibold">$25</p>
             </div>
-        </section>
-        <section class="py-10">
-            <h3 class="text-2xl text-center mb-6">Galería</h3>
-            <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
-                <div class="bg-gray-200 h-32 rounded-lg"></div>
-                <div class="bg-gray-200 h-32 rounded-lg"></div>
-                <div class="bg-gray-200 h-32 rounded-lg"></div>
-                <div class="bg-gray-200 h-32 rounded-lg"></div>
-                <div class="bg-gray-200 h-32 rounded-lg"></div>
-                <div class="bg-gray-200 h-32 rounded-lg">
-<img src="https://images.pexels.com/photos/15641300/pexels-photo-15641300.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Ubicación image" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+            <div class="card bg-white rounded-lg shadow-lg p-4">
+<img src="https://images.pexels.com/photos/15205319/pexels-photo-15205319.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 2: Crea una landing page refinada para la pastelería “Dulce Tentación”. Usa paleta pastel (rosa suave, crema, dorado claro) para una vista limpia y elegante. Hero section con foto de calidad de un pastel premium, breve historia de la pastelería y CTA para “Hacer pedido”. Muestra categorías de pasteles (Chocolate, Frutas, Red Velvet, Tres Leches), cada una con breve descripción y precio. Incluye sección de ingredientes y proceso artesanal, testimonios con estrellas, galería pequeña, formulario de contacto, información de ubicación y horarios. Usa cartas redondas con sombras ligeras, tipografía elegante, optimizado para móvil. Agrega tags de Twitter, Facebook e Instagram." loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
 
-<img src="https://images.pexels.com/photos/7319297/pexels-photo-7319297.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="Contáctanos image" loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
-</div>
+                <h4 class="font-bold">Frutas</h4>
+                <p>Pastel fresco con frutas de temporada.</p>
+                <p class="font-semibold">$30</p>
             </div>
-        </section>
-        <section id="contact" class="py-10">
-            <h3 class="text-2xl text-center mb-6">Contáctanos</h3>
-            <form class="max-w-md mx-auto">
-                <label class="block mb-2" for="name">Nombre</label>
-                <input class="w-full p-2 border rounded mb-4" type="text" id="name" required>
-                <label class="block mb-2" for="email">Correo Electrónico</label>
-                <input class="w-full p-2 border rounded mb-4" type="email" id="email" required>
-                <label class="block mb-2" for="phone">Teléfono</label>
-                <input class="w-full p-2 border rounded mb-4" type="tel" id="phone" required>
-                <button type="submit" class="bg-pink-500 text-white py-2 px-4 rounded w-full">Enviar</button>
-            </form>
-        </section>
-        <section class="py-10">
-            <h3 class="text-2xl text-center mb-6">Ubicación</h3>
-            <p class="text-center">📍 Calle Falsa 123, Ciudad</p>
-            <p class="text-center">📞 (123) 456-7890</p>
-            <p class="text-center">🕰️ Lunes a Sábado, 9 AM - 6 PM</p>
-        </section>
-    </main>
-    <footer class="bg-gray-800 text-white py-6">
-        <div class="grid grid-cols-1 sm:grid-cols-4 gap-4">
-            <div>
-                <h4 class="font-bold">Dulce Tentación</h4>
-                <p>Pastelería artesanal.</p>
+            <div class="card bg-white rounded-lg shadow-lg p-4">
+<img src="https://images.pexels.com/photos/27275813/pexels-photo-27275813.jpeg?auto=compress&cs=tinysrgb&h=350" alt="Imagen ilustrativa 3: Crea una landing page refinada para la pastelería “Dulce Tentación”. Usa paleta pastel (rosa suave, crema, dorado claro) para una vista limpia y elegante. Hero section con foto de calidad de un pastel premium, breve historia de la pastelería y CTA para “Hacer pedido”. Muestra categorías de pasteles (Chocolate, Frutas, Red Velvet, Tres Leches), cada una con breve descripción y precio. Incluye sección de ingredientes y proceso artesanal, testimonios con estrellas, galería pequeña, formulario de contacto, información de ubicación y horarios. Usa cartas redondas con sombras ligeras, tipografía elegante, optimizado para móvil. Agrega tags de Twitter, Facebook e Instagram." loading="lazy" class="w-full h-40 object-cover rounded-t-xl"/>
+
+                <h4 class="font-bold">Red Velvet</h4>
+                <p>Pastel rojo con glaseado de queso crema.</p>
+                <p class="font-semibold">$28</p>
             </div>
-            <div>
-                <h4 class="font-bold">Información</h4>
-                <ul>
-                    <li><a href="#" class="text-gray-400">Sobre nosotros</a></li>
-                    <li><a href="#" class="text-gray-400">Política de privacidad</a></li>
-                </ul>
-            </div>
-            <div>
-                <h4 class="font-bold">Contacto</h4>
-                <ul>
-                    <li><a href="#contact" class="text-gray-400">Contáctanos</a></li>
-                </ul>
-            </div>
-            <div>
-                <h4 class="font-bold">Redes Sociales</h4>
-                <a href="#" class="text-gray-400">Twitter</a>
-                <a href="#" class="text-gray-400">Facebook</a>
-                <a href="#" class="text-gray-400">Instagram</a>
+            <div class="card bg-white rounded-lg shadow-lg p-4">
+                <h4 class="font-bold">Tres Leches</h4>
+                <p>Pastel húmedo y dulce, perfecto para cualquier ocasión.</p>
+                <p class="font-semibold">$22</p>
             </div>
         </div>
-    </footer>
-    
+    </section>
+
+    <section class="container mx-auto py-10">
+        <h3 class="text-3xl font-semibold mb-6">Ingredientes y Proceso Artesanal</h3>
+        <p>Utilizamos solo los mejores ingredientes para crear nuestros pasteles, siguiendo un proceso artesanal que garantiza calidad y sabor.</p>
+    </section>
+
+    <section class="container mx-auto py-10">
+        <h3 class="text-3xl font-semibold mb-6">Testimonios</h3>
+        <div class="flex space-x-4">
+            <div class="text-center">
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>"Los mejores pasteles que he probado!"</p>
+            </div>
+            <div class="text-center">
+                <p>⭐⭐⭐⭐⭐</p>
+                <p>"Increíble sabor y presentación."</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="container mx-auto py-10">
+        <h3 class="text-3xl font-semibold mb-6">Galería</h3>
+        <div class="grid grid-cols-2 sm:grid-cols-3 gap-4">
+            <div class="bg-gray-200 h-32 rounded-lg"></div>
+            <div class="bg-gray-200 h-32 rounded-lg"></div>
+            <div class="bg-gray-200 h-32 rounded-lg"></div>
+        </div>
+    </section>
+
+    <section id="contact" class="container mx-auto py-10">
+        <h3 class="text-3xl font-semibold mb-6">Contáctanos</h3>
+        <form class="bg-white p-6 rounded-lg shadow-lg">
+            <label for="name" class="block mb-2">Nombre:</label>
+            <input type="text" id="name" class="w-full mb-4 p-2 border rounded" required>
+            <label for="email" class="block mb-2">Correo Electrónico:</label>
+            <input type="email" id="email" class="w-full mb-4 p-2 border rounded" required>
+            <label for="phone" class="block mb-2">Teléfono:</label>
+            <input type="tel" id="phone" class="w-full mb-4 p-2 border rounded">
+            <button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded w-full">Enviar</button>
+        </form>
+    </section>
+
+    <section class="container mx-auto py-10">
+        <h3 class="text-3xl font-semibold mb-6">Ubicación</h3>
+        <p>📍 Calle Falsa 123, Ciudad</p>
+        <p>📞 (123) 456-7890</p>
+        <p>🕰️ Lunes a Sábado: 9am - 6pm</p>
+    </section>
+</main>
+
+<footer class="bg-gray-800 text-white py-6">
+    <div class="container mx-auto grid grid-cols-1 md:grid-cols-4 gap-6">
+        <div>
+            <h4 class="font-bold">Dulce Tentación</h4>
+            <p>Tu pastelería de confianza.</p>
+        </div>
+        <div>
+            <h4 class="font-bold">Información</h4>
+            <ul>
+                <li><a href="#" class="text-gray-400">Sobre nosotros</a></li>
+                <li><a href="#" class="text-gray-400">Política de privacidad</a></li>
+            </ul>
+        </div>
+        <div>
+            <h4 class="font-bold">Contacto</h4>
+            <ul>
+                <li><a href="#contact" class="text-gray-400">Contáctanos</a></li>
+            </ul>
+        </div>
+        <div>
+            <h4 class="font-bold">Redes Sociales</h4>
+            <ul class="flex space-x-4">
+                <li><a href="#" class="text-gray-400">Twitter</a></li>
+                <li><a href="#" class="text-gray-400">Facebook</a></li>
+                <li><a href="#" class="text-gray-400">Instagram</a></li>
+            </ul>
+        </div>
+    </div>
+</footer>
+
+
+
 
   <!-- Chatwoot -->
   
